<resources>
    <string name="app_name">Penjadwalan Produksi</string>

    <!--    Main Fragment-->
    <string name="titleMain">Penjadwalan \nProduksi</string>
    <string name="articleMain">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum</string>


    <!--    login Pages-->
    <string name="loginTitle">Masuk</string>
    <string name="usernameEditText">User Name</string>
    <string name="passwordEditText">Password</string>
    <string name="fillLogin">Isi username dan password</string>
    <string name="wrongLogin">username atau password salah</string>

    <!--    Fragment Result-->
    <string name="identitiy">Nama Pelanggan:</string>
    <string name="mesinHeader">Proses</string>
    <string name="startHeader">Waktu Mulai</string>
    <string name="endHeader">Waktu Selesai</string>
    <string name="jobBottom">Pekerjaan ke:</string>

    <!--fssp item-->
    <string name="spanTitle">Total Waktu</string>
    <string name="namaTitle">Nama</string>
    <string name="kontakTitle">Kontak</string>
    <string name="alamatTitle">Alamat</string>
    <string name="emailTitle">Email</string>
    <string name="telpTitle">Telepon</string>
    <string name="split">:</string>
    <string name="simpan">Simpan</string>

    <!--    Fragment Pelanggan-->
    <string name="createBtn">Tambah Baru</string>

    <!--       Fragment Pelanggan Detail-->
    <string name="TitleDetailPelanggan">Detail Pelanggan</string>

    <!--    menu drawer-->
    <string name="optHome">Home</string>
    <string name="optPelanggan">Pelanggan</string>
    <string name="optProduk">Produk</string>
    <string name="optOrder">Pemesanan</string>
    <string name="optSetting">Pengaturan</string>
    <string name="optAbout">About</string>

    <!--    pelanggan_modal-->
    <string name="buatPelanggan">Tambah Pelanggan</string>

    <!--    produk modal-->
    <string name="buatProduk">Tambah Produk</string>
    <string name="kodeProduk">Kode Produk</string>
    <string name="namaProduk"> Nama Produk</string>
    <string name="timeProduk">Waktu (menit)</string>

    <!--    produk detail-->
    <string name="btnOrder">Buat Pesanan</string>
    <string name="btnEdit">Ubah</string>
    <string name="btnSave">Simpan</string>
    <string name="btnDelete">Hapus</string>
    <string name="processTv">Proses Produk</string>
    <string name="processAddBtn">Add Proses</string>
    <string name="waktuInfo">Total Waktu :</string>

    <!--    process detail-->
    <string name="buatProcess">Tambah Process</string>
    <string name="namaProcess">Nama Proses</string>
    <string name="waktuProses">Durasi (Menit)</string>

    <!--    order modal-->
    <string name="titleOrder">Tambah Pesanan Baru</string>
    <string name="jumlahOrder">Jumlah</string>
    <string name="btnOrderModal">Pesan</string>

    <!--    about page-->
    <string name="titleAbout">Algoritma\nDigunakan</string>

    <!--    setting-->
    <string name="mesinConf">Jumlah Mesin</string>

<!--    Pesanan Fragment-->
    <string name="numOfPesanan">Jumlah pesanan:</string>
    <string name="prosesBtn">Proses Pesanan</string>
    <string name="tambahPemesananBtn">Tambah Pesanan</string>
    <string name="hapusPesananBtn">Hapus Seluruh Pesanan</string>

<!--    pesanan item-->
    <string name="pesanItemNama">Nama Pemesan</string>
    <string name="pesanItemProduk"> Barang pesanan</string>
    <string name="pesanItemQty">Jumlah pesanan</string>
</resources>