<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Pelanggan_Modal">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:minWidth="100dp"
        android:minHeight="450dp"
        android:orientation="vertical">

        <TextView

            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/buatPelanggan"
            android:textSize="20dp"
            android:padding="50dp"
            android:textAlignment="center"/>


        <EditText
            android:id="@+id/nama"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/namaTitle"
            android:inputType="text"/>

        <EditText
            android:id="@+id/kontak"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/kontakTitle"
            android:inputType="phone"/>

        <EditText
            android:id="@+id/alamat"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/alamatTitle"
            android:lines="5"
            android:inputType="textMultiLine"/>

        <EditText
            android:id="@+id/email"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/emailTitle"
            android:inputType="textEmailAddress"/>

        <EditText
            android:id="@+id/telp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/telpTitle"
            android:inputType="phone"/>

        <Button
            android:id="@+id/saveBtn"
            android:layout_marginRight="15dp"
            android:layout_marginLeft="15dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/simpan"/>

    </LinearLayout>

</FrameLayout>