<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".View.Pelanggan.Pelanggan_Modal">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:layout_margin="20dp">

        <TextView

            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/buatPelanggan"
            android:textSize="20dp"
            android:padding="50dp"
            android:textAlignment="center"/>


        <EditText
            android:id="@+id/nama"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/namaTitle"


            android:focusable="false"
            android:focusableInTouchMode="false"
            android:cursorVisible="false"
            android:inputType="none" />

        <EditText
            android:id="@+id/kontak"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/kontakTitle"


            android:focusable="false"
            android:focusableInTouchMode="false"
            android:cursorVisible="false"
            android:inputType="none"/>

        <EditText
            android:id="@+id/alamat"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/alamatTitle"
            android:lines="5"


            android:focusable="false"
            android:focusableInTouchMode="false"
            android:cursorVisible="false"
            android:inputType="none"/>

        <EditText
            android:id="@+id/email"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/emailTitle"


            android:focusable="false"
            android:focusableInTouchMode="false"
            android:cursorVisible="false"
            android:inputType="none"/>

        <EditText
            android:id="@+id/telp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/telpTitle"



            android:focusable="false"
            android:focusableInTouchMode="false"
            android:cursorVisible="false"
            android:inputType="none"/>

        <Button
            android:id="@+id/orderBtn"
            android:layout_marginRight="15dp"
            android:layout_marginLeft="15dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/btnOrder"/>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            >

            <Button
                android:id="@+id/btnEdit"
                android:layout_marginRight="15dp"
                android:layout_marginLeft="15dp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/btnEdit"/>

            <Button
                android:id="@+id/btnDelete"
                android:layout_marginRight="15dp"
                android:layout_marginLeft="15dp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/btnDelete"/>




        </LinearLayout>

    </LinearLayout>

</FrameLayout>