<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".View.Produk.Produk_Modal">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:minWidth="100dp"
        android:minHeight="450dp"
        android:orientation="vertical"
        android:layout_margin="20dp">

        <TextView

            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/buatProduk"
            android:textSize="20dp"
            android:padding="50dp"
            android:textAlignment="center"/>


        <EditText
            android:id="@+id/kode"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/kodeProduk"
            android:inputType="text"/>

        <EditText
            android:id="@+id/nama"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/namaProduk"
            android:inputType="text"/>

        <EditText
            android:id="@+id/waktu"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/timeProduk"
            android:inputType="number"/>

        <Button
            android:id="@+id/saveBtn"
            android:layout_marginRight="15dp"
            android:layout_marginLeft="15dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/simpan"/>

    </LinearLayout>

</FrameLayout>