<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".View.Produk.Fragment_produk_detail">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:minWidth="100dp"
        android:minHeight="450dp"
        android:orientation="vertical"
        android:layout_margin="20dp">

        <TextView

            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/buatProduk"
            android:textSize="20dp"
            android:padding="50dp"
            android:textAlignment="center"/>


        <EditText
            android:id="@+id/kode"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/kodeProduk"


            android:focusable="false"
            android:focusableInTouchMode="false"
            android:cursorVisible="false"
            android:inputType="none"


            />

        <EditText
            android:id="@+id/nama"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/namaProduk"


            android:focusable="false"
            android:focusableInTouchMode="false"
            android:cursorVisible="false"
            android:inputType="none"

            />

        <TextView
            android:id="@+id/waktu"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"/>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <Button
                android:id="@+id/btnEdit"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/btnEdit"
                android:layout_weight="1"
                android:textSize="10sp"
                android:layout_alignParentLeft="true"
                android:layout_marginRight="10dp"/>

            <Button
                android:id="@+id/btnDelete"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/btnDelete"
                android:layout_weight="1"
                android:textSize="10sp"
                android:layout_alignParentRight="true"
                android:layout_marginLeft="10dp"/>

        </LinearLayout>

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/processTv"
                android:textColor="@color/dark"
                android:layout_centerVertical="true"
                android:textSize="10dp"/>




        </RelativeLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/namaProcess"/>

            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/waktuProses"/>

        </LinearLayout>

        <ListView
            android:id="@+id/lvProduk"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"/>

    </LinearLayout>

</FrameLayout>