<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".View.Order.Pemesanan.FragmentPesanan">

   <LinearLayout
       android:layout_width="match_parent"
       android:layout_height="wrap_content"
       android:orientation="vertical">

   <RelativeLayout
       android:layout_width="match_parent"
       android:layout_height="wrap_content">



      <Button
          android:id="@+id/tambahPesananBtn"
          android:layout_width="wrap_content"
          android:layout_height="wrap_content"
          android:text="@string/tambahPemesananBtn"
          android:layout_alignParentStart="true"/>


      <Button
         android:id="@+id/orderProcessButton"
          android:layout_width="wrap_content"
          android:layout_height="wrap_content"
         android:text="@string/prosesBtn"
          android:layout_alignParentEnd="true" />

      <TextView
          android:id="@+id/titlePesanan"

          android:layout_width="wrap_content"
          android:layout_height="wrap_content"
          android:text="@string/numOfPesanan"
          android:textSize="20sp"
          android:layout_below="@id/tambahPesananBtn"/>

      <TextView
          android:id="@+id/pesananNumber"

          android:layout_width="wrap_content"
          android:layout_height="wrap_content"
          android:layout_toEndOf="@id/titlePesanan"
          android:layout_below="@id/tambahPesananBtn"
          android:textSize="20sp"/>

   </RelativeLayout>

      <androidx.recyclerview.widget.RecyclerView
          android:id="@+id/lvPemesanan"
          android:layout_width="match_parent"
          android:layout_height="wrap_content"/>



      <Button
          android:id="@+id/btnDelete"
          android:layout_width="match_parent"
          android:layout_height="wrap_content"
          android:backgroundTint="@color/red"
          android:text="@string/hapusPesananBtn"
          android:layout_marginStart="10dp"
          android:layout_marginEnd="10dp"/>


   </LinearLayout>



</FrameLayout>